2008-09-10  Marc Singer  <elf@zealous.synapse.com>

	* src/apex/cmd-image.c (cmd_image): Fixed cascade testing of
	options.

	* src/lib/gmtime.c (gmtime_r): Fixed year calc (typo).
	(gmtime_r): Fixed month calc, off by one.
	(convert_two_digits): Fixed representation of numbers; digits
	swapped.

	* src/lib/strimatch.c (strimatch): Fixed this function to properly
	match when the case is identical.

2008-08-28  Marc Singer  <elf@zealous.synapse.com>

	* src/apex/cmd-help.c (compare_commands): Righted command sort
	order.
	(cmd_help): Eliminated a possible overflow of command listing
	array.

2008-08-27  Marc Singer  <elf@zealous.synapse.com>

	* src/drivers/drv-mem.c (memory_write): Fixed un-aligned write
	code.  The original test used were allowing invalid unaligned
	accesses.

2008-08-26  Marc Singer  <elf@zealous.synapse.com>

	* src/mach-mx3/nor-cfi.h: Removed bogus override of the NOR flash
	memory command type.

	* src/mach-mx3/initialize.c (target_init): New initialization of
	the DM9000 memory region for MX31.  The timing is much tighter and
	the OE and R_Wn timing has a better guarantee of accuracy.

	* src/drivers/drv-dm9000.c (cmd_eth): New 'r' and 'w' subcommands
	for inspecting registers of the DM9000.  Renamed the 're' command
	to eeprom since that's what it does.

	* src/apex/services.c (init_services): More clear output from
	service startup in LL mode.

	* Makefile (SUBLEVEL): New version for changes to DM9000 code and
	for new KarmaV configuration.

2008-07-09  Marc Singer  <elf@zealous.synapse.com>

	* src/drivers/drv-ext2.c: Added support for the inode_size field
	in the first revision of the second-extended filesystem's
	superblock.

2008-05-20  Marc Singer  <elf@buici.com>

	* debian/postinst: Fixed the postinst script to only run on the
	NSLU2.

2007-10-16  Marc Singer  <elf@zealous.synapsedev.com>

	* Makefile: The help make target now shows the configurations and
	the descriptions of them.
	(SUBLEVEL): 1.5.13.
